fixed query layout issues for winner section

--- a/shop/src/SASS/Nav.sass
+++ b/shop/src/SASS/Nav.sass
@@ -92,7 +92,7 @@ header
                 border-radius: 5px;
             @media screen and (max-width: 950px) 
                 height: 30px;
-                font-size: 1rem;
+                font-size: 0.75rem;
                 width: 60%;
         input:focus
             outline-color: #007F60;
