--- a/shop/src/SASS/Nominated.sass
+++ b/shop/src/SASS/Nominated.sass
@@ -15,7 +15,7 @@ footer
         width: 100%;
         padding: 10px;
         .nombutton
-            display: none;
+            display: flex;
             h1
                 font-size: 2.25rem;
                 color: gold;
@@ -33,6 +33,7 @@ footer
                 @media screen and (max-width: 950px) 
                     font-size: 0.75rem;
                     padding-top: 12px;
+                    
   
             button
                 background-color: transparent
@@ -97,7 +98,7 @@ footer
                 @media screen and (max-width: 1366px) 
                     font-size: 1rem;
     .nomWinners
-        display: flex;
+        display: none;
         flex-direction: row;
         width: 100%;
         flex-wrap: wrap;
@@ -106,30 +107,59 @@ footer
             margin-bottom: 10px;
         
         .winnerIndividual:first-child
-            padding: 10px;
+            padding: 10px 15px;
             border: 4px solid gold;
     
         .winnerIndividual:nth-child(2)
-            padding: 10px;
+            padding: 10px 15px;
             border: 3px solid silver;
 
         .winnerIndividual:nth-child(3)
-            padding: 10px;
+            padding: 10px 15px;
             border: 2px solid chocolate;
-    .nominated
+    .nomGroup
         display: none;
-        flex-direction: row;
-        width: 100%;
-        flex-wrap: wrap;
-        justify-content: center;
-        @media screen and (max-width: 950px) 
-            margin-bottom: 10px;
-        .winnerButton
-            background-color: gold;
-            padding: 5px;
-            font-size: 1.25rem;
-            margin: 10px;
-            width: 95%;
+        flex-direction: column;
+        .nominated
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            flex-wrap: wrap;
+            justify-content: center;
+            @media screen and (max-width: 950px) 
+                margin-bottom: 10px;
+        .winnerGroup
+            display: flex;
+            margin: 0 10px 10px 10px;
+            width: 100%;
+            justify-content: center;
+            .winnerButton
+                font-size: 1.5rem;
+                color: gold;
+                padding-top: 12px;
+                @media screen and (max-width: 950px) 
+                    font-size: 0.75rem;
+                    font-weight: bold;
+                    text-align: left;
+            button
+                background-color: transparent
+                color: white;
+                border: 0;
+                transform: rotate(-90deg);
+                font-size: 3rem;
+                margin: 10px 0 0 15px;
+                @media screen and (max-width: 2800px) 
+                    font-size: 3rem;
+                    margin: 10px 0 0 15px;
+                @media screen and (max-width: 1920px) 
+                    font-size: 2rem;
+                    margin: 5px 0 0 15px;
+                @media screen and (max-width: 1366px) 
+                    font-size: 1.25rem;
+                @media screen and (max-width: 950px) 
+                    font-size: 1rem;
+                    margin: 10px 0 0 5px;
+
 .modal
     background-color: white;
     border: 4px solid gold
